<resources>
    <string name="app_name">PathWay</string>
    <string name="splashPathway">PathWay</string>
    <string name="pathText">Path</string>
    <string name="wayText">Way.</string>
    <string name="welcomeText1">Discover Your True</string>
    <string name="welcomeText2">Here.</string>
    <string name="welcomeDescription">Prepare yourself to face competition in the workforce with your path</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="loginWelcome">Welcome Cadet</string>
    <string name="loginDescription">Login to your account to get started</string>
    <string name="loginForgotPassword">Forgot the Password ?</string>
    <string name="loginCreateNewAccount">Create new account</string>
    <string name="emailError">Invalid email</string>
    <string name="passwordValidation">Password must not be less than 8 characters</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="registerWelcome">Create Account</string>
    <string name="registerDescription">Create an account so you can explore your path</string>
    <string name="registerAlreadyHaveAccount">Already have an account</string>
    <string name="title_home">Home</string>
    <string name="title_university">University</string>
    <string name="title_profession">Profession</string>
    <string name="title_goals">Goals</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="searchBarHome">Search</string>
    <string name="fragmentTextHome1">Get Your</string>
    <string name="fragmentTextHome2">Path</string>
    <string name="fragmentTextHome3">!</string>
    <string name="shapeCircle">Circle</string>
    <string name="pathgoals">pathGoals</string>
    <string name="topUniversity">Top University</string>
    <string name="newestJobs">Newest Jobs</string>
    <string name="seeAll">See all</string>
    <string name="searchBarUniversity">Find university</string>
    <string name="searchBarProfession">Find profession</string>
    <string name="searchBarGoals">Find your goals</string>
    <string name="dummy">dummy</string>
    <string name="worldRank">World Rank</string>
    <string name="worldRankContent">44</string>
    <string name="universityName">University</string>
    <string name="universityAddress">University Address</string>
    <string name="workPosition">Position</string>
    <string name="workPlace">Workplace</string>
    <string name="workDomicile">Jakarta, Indonesia</string>
    <string name="workType">Full Time</string>
    <string name="internshipPosition">Position</string>
    <string name="internshipPlace">Workplace</string>
    <string name="internshipDomicile">Jakarta, Indonesia</string>
    <string name="internshipType">Internship</string>
    <string name="noData">No data found</string>
    <string name="noDataDesc1">Please search to find your dream jobs.</string>
    <string name="noDataDesc2">Please search to find your dream Universities.</string>
    <string name="noDataDesc3">Please search to find your dream Professions.</string>
    <string name="iv_rules">Rules</string>
    <string name="rules">Rules</string>
    <string name="input_path">Type about yourself</string>
    <string name="input_path_hint">Input your passion</string>
    <string name="submitButton">Submit</string>
    <string name="forgotPasswordWelcome">Forgot password</string>
    <string name="forgotPasswordDescription">Forgot your password cadet? enter registered email to reset password</string>
    <string name="university">University</string>
    <string name="backArrow">Back arrow</string>
    <string name="backgroundUniv">Background University</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="goals_detailUniv">Goals</string>
    <string name="positionName_detailProf">Position</string>
    <string name="workPlace_detailProf">Workplace</string>
    <string name="workDomicile_detailProf">Domicile</string>
    <string name="profession">Profession</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="inputName">Enter name</string>
    <string name="inputEmail">Enter email</string>
    <string name="inputPassword">Enter password</string>
    <string name="inputPath">Input Path</string>
    <string name="outputDesc">It looks like you\'re a good fit to choose</string>
    <string name="outputResult">Department Result</string>
    <string name="outputProfDesc">Furthermore, you can become a :</string>
    <string name="outputDesc2">Another related major for you</string>
    <string name="outputResultProfession">Profession Recomendation</string>
    <string name="presentation">x%</string>
    <string name="relatedMajor">Related Major</string>
    <string name="saveButton">Save</string>
    <string name="PathWay">PathWay</string>
    <string-array name="data_university">
        <item>Universitas Indonesia</item>
        <item>Universitas Gajah Mada</item>
        <item>Universitas Airlangga</item>
        <item>Institut Teknologi Bandung</item>
        <item>Universitas Brawijaya</item>
        <item>Universitas Bina Nusantara</item>
        <item>Universitas Negeri Semarang</item>
        <item>institut Pertanian Bogor</item>
        <item>Universitas Sriwijaya</item>
        <item>Universitas Pendidikan Indonesia</item>
    </string-array>
    <string-array name="data_address">
        <item>Jl. Lingkar, Pondok Cina, Kecamatan Beji, Kota Depok, Jawa Barat 16424</item>
        <item>Bulaksumur, Caturtunggal, Kec. Depok, Kabupaten Sleman, Yogyakarta 55281.</item>
        <item>Jl. Mayjen Prof. Dr. Moestopo No.47, Pacar Kembang, Kec. Tambaksari</item>
        <item>ITB Kampus Ganesha Jl. Ganesha 10. Bandung Jawa Barat Indonesia.</item>
        <item>Jl. Veteran No.16, Malang, Jawa Timur</item>
        <item>Kampus Anggrek Jl. Kebon Jeruk Raya No. 27, Kebon Jeruk Jakarta Barat 11530</item>
        <item>Gedung H (Rektorat) Kampus Unnes Sekaran Gunungpati, Semarang</item>
        <item>iJl. Raya Dramaga, Bogor 16680 Jawa Barat.</item>
        <item>Jl Raya Palembang Prabumulih Km. 32 Inderalaya Ogan Komering Ilir.</item>
        <item>Jl. Dr. Setiabudhi No. 229 Bandung 40154. Jawa Barat</item>
    </string-array>
    <string-array name="data_description">
        <item>Universitas Indonesia adalah sebuah perguruan tinggi negeri di Indonesia. Kampus utamanya terletak di bagian Utara dari Depok, Jawa Barat tepat di perbatasan antara Depok dengan wilayah Jakarta Selatan, dan kampusnya di Jakarta Barat.</item>
        <item>Universitas Gadjah Mada adalah sebuah perguruan tinggi negeri di Indonesia. Kampus utamanya terletak di Yogyakarta, Daerah Istimewa Yogyakarta, Indonesia. Universitas ini didirikan oleh Pemerintah Republik Indonesia pada tanggal 19 Desember 1949.</item>
        <item>Universitas Airlangga adalah sebuah perguruan tinggi negeri di Indonesia yang berdiri pada tanggal 10 November 1954 di Surabaya. Universitas ini merupakan perguruan tinggi negeri tertua di luar Jakarta.</item>
        <item>Institut Teknologi Bandung adalah sebuah perguruan tinggi negeri di Indonesia yang berkedudukan di Kota Bandung. ITB merupakan perguruan tinggi teknik pertama di Indonesia.</item>
        <item>Universitas Brawijaya adalah sebuah perguruan tinggi negeri di Indonesia yang berdiri pada tanggal 5 Januari 1963. Kampus utamanya terletak di Kota Malang, Jawa Timur.</item>
        <item>Universitas Bina Nusantara adalah sebuah perguruan tinggi swasta di Indonesia yang berdiri pada tanggal 21 Juni 1996. Kampus utamanya terletak di Jakarta Barat.</item>
        <item>Universitas Negeri Semarang adalah sebuah perguruan tinggi negeri di Indonesia yang berdiri pada tanggal 16 Mei 1965. Kampus utamanya terletak di Kota Semarang, Jawa Tengah.</item>
        <item>Institut Pertanian Bogor adalah sebuah perguruan tinggi negeri di Indonesia yang berdiri pada tanggal 1 September 1963. Kampus utamanya terletak di Kota Bogor, Jawa Barat.</item>
        <item>Universitas Sriwijaya adalah sebuah perguruan tinggi negeri di Indonesia yang berdiri pada tanggal 29</item>
    </string-array>
    <string-array name="data_worldRank">
        <item>44</item>
        <item>54</item>
        <item>64</item>
        <item>74</item>
        <item>84</item>
        <item>94</item>
        <item>104</item>
        <item>114</item>
        <item>124</item>
        <item>134</item>
    </string-array>
    <string-array name="data_position">
        <item>Software Engineer</item>
        <item>UI/UX Designer</item>
        <item>Frontend Developer</item>
        <item>Backend Developer</item>
        <item>Mobile Developer</item>
        <item>Fullstack Developer</item>
        <item>DevOps Engineer</item>
        <item>Product Manager</item>
        <item>Project Manager</item>
        <item>Business Analyst</item>
    </string-array>
    <string-array name="data_company">
        <item>Gojek</item>
        <item>Traveloka</item>
        <item>Tokopedia</item>
        <item>shopee</item>
        <item>shopee</item>
        <item>telkomsel</item>
        <item>Gojek</item>
        <item>Shopee</item>
        <item>Travloka</item>
        <item>Xl Axiata</item>
    </string-array>
    <string-array name="data_domicile">
        <item>Jakarta, Indonesia</item>
        <item>Bandung, Indonesia</item>
        <item>Surabaya, Indonesia</item>
        <item>Malang, Indonesia</item>
        <item>Yogyakarta, Indonesia</item>
        <item>Medan, Indonesia</item>
        <item>Denpasar, Indonesia</item>
        <item>Padang, Indonesia</item>
        <item>Manado, Indonesia</item>
        <item>Palu, Indonesia</item>
    </string-array>
    <string-array name="data_fullOrIntern">
        <item>Fulltime</item>
        <item>Internship</item>
        <item>Internship</item>
        <item>Fulltime</item>
        <item>Fulltime</item>
        <item>Internship</item>
        <item>Fulltime</item>
        <item>Fulltime</item>
        <item>Internship</item>
        <item>Fulltime</item>
    </string-array>
</resources>