<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".app.ui.detailprofession.DetailProfessionActivity">

    <ImageView
        android:id="@+id/iv_backArrow_detailProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_backArrow_detailProf">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_work_detailProfession"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/iv_univ_detailProfession"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profession"
                android:src="@drawable/dummywork" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        card_view:cardCornerRadius="15dp">

        <TextView
            android:id="@+id/tv_workDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/workType"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_positionName_detailProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/positionName_detailProf"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/tv_workPlace_detailProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/workPlace_detailProf"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/blackLight"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_positionName_detailProf"
        app:layout_constraintTop_toBottomOf="@+id/tv_positionName_detailProf" />

    <TextView
        android:id="@+id/tv_workDom_detailProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/workDomicile_detailProf"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/blackLight"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_workPlace_detailProf"
        app:layout_constraintTop_toBottomOf="@+id/tv_workPlace_detailProf" />

    <TextView
        android:id="@+id/tv_workDesc_detailProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppinsregular"
        android:justificationMode="inter_word"
        android:text="@string/loremIpsum"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_workDom_detailProf"
        app:layout_constraintTop_toBottomOf="@+id/tv_workDom_detailProf"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/goals_detailUniv"
        android:focusable="true"
        android:src="@drawable/toogle_goals"
        android:backgroundTint="@color/blue"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>