<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.detailuniversity.DetailUniversityActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_backArrow_detailUniv">

        <ImageView
            android:id="@+id/iv_background_detailUniv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/backgroundUniv"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/uibackground" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_location_detailUniversity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_location_detailUniversity"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/university"
                    android:src="@drawable/ic_location_blue" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_backArrow_detailUniv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_univ_detailUniversity"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/iv_univ_detailUniversity"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:contentDescription="@string/university"
                android:src="@drawable/dummyuniversities" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="241dp" />

    <TextView
        android:id="@+id/tv_universitiesName_detailUniv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/universityName"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/tv__universitiesAdd_detailUniv"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/universityAddress"
        android:textColor="@color/blackLight"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_universitiesName_detailUniv"
        app:layout_constraintTop_toBottomOf="@+id/tv_universitiesName_detailUniv" />

    <TextView
        android:id="@+id/tv_desc_detailUniv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/loremIpsum"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/poppinsregular"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv__universitiesAdd_detailUniv"
        app:layout_constraintTop_toBottomOf="@+id/tv__universitiesAdd_detailUniv"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/goals_detailUniv"
        android:focusable="true"
        android:src="@drawable/toogle_goals"
        android:backgroundTint="@color/blue"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_worldRank1_detailUniv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/worldRank"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_worldRank2_detailUniv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/worldRankContent"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_worldRank1_detailUniv"
        app:layout_constraintStart_toStartOf="@+id/tv_worldRank1_detailUniv"
        app:layout_constraintTop_toBottomOf="@+id/tv_worldRank1_detailUniv"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>