<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.path.inputpath.InputPathActivity">

    <FrameLayout
        android:id="@+id/frameLayout_Input_Path"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pathGoals_Input_Path"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/iv_pathGoals_Input_Path"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:contentDescription="@string/pathgoals"
                android:src="@drawable/pathgoals" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/rules"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout_Input_Path"
        app:layout_constraintStart_toStartOf="@+id/frameLayout_Input_Path"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_Input_Path" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_forImage_Input_Path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rules">

        <ImageView
            android:id="@+id/iv_rules_Input_Path"
            android:layout_width="345dp"
            android:layout_height="268dp"
            android:contentDescription="@string/iv_rules"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rules"
            app:srcCompat="@drawable/rules" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_input_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/input_path"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cv_forImage_Input_Path"
        app:layout_constraintStart_toStartOf="@+id/cv_forImage_Input_Path"
        app:layout_constraintTop_toBottomOf="@+id/cv_forImage_Input_Path" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPathEditTextLayout"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_path">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPathEditText"
            style="@style/editTextBoxForInputPath"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/input_path_hint"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:textSize="14sp"
            android:gravity="top"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_btnS"
        style="@style/blueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/inputPathEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/inputPathEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputPathEditTextLayout">

        <Button
            android:id="@+id/btn_submit"
            style="@style/blueButton"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:text="@string/submitButton" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>