<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.splashscreen.SplashActivity">

    <ImageView
        android:id="@+id/iv_splashScreen"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/splashPathway"
        android:src="@drawable/splash_pathway"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splashScreen">

        <TextView
            android:id="@+id/tv_pathText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/pathText"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_splashScreen" />

        <TextView
            android:id="@+id/tv_wayText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/wayText"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_splashScreen"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>